fix: word wrap and margins search bar

--- a/src/Posts/Common/editorStyles.module.css
+++ b/src/Posts/Common/editorStyles.module.css
@@ -4,7 +4,7 @@
     padding: 0;
     border-radius: 0;
     background: #fefefe;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .editor :global(.public-DraftEditor-content) {
